--- a/main.html
+++ b/main.html
@@ -1,16 +1,109 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Toggler</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+  }
+  
+  .container {
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .toggle-container {
+    margin-bottom: 20px;
+	  display: flex; 
+	  flex-direction: column;
+	  align-items: center;
+	  justify-content: space-between;
+	  gap : 20px;
+	  
+  }
+  
+  .toggle {
+    display: none;
+  }
 
+.toggle-box{
+	/* position: relative;
+	left: 40px; */
+}
+  
+  .toggle-label {
+    display: inline-block;
+    padding: 10px 20px;
+    cursor: pointer;
+    border-radius: 20px;
+    border: 2px solid #ccc;
+    transition: background-color 0.3s, color 0.3s;
+	
+  }
+  
+  .toggle-label:hover {
+    background-color: #eee;
+	padding-left: 20px;
+  }
+  
+  .toggle:checked + .toggle-label {
+    background-color: #4CAF50;
+    color: #fff;
+    border-color: #4CAF50;
+  }
+
+	h2{
+		text-align:center;
+	}
+
+.toggle-box input{
+	
+}
+</style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+
+<div class="container">
+  <h2>How do you want your project to be</h2>
+  <div class="toggle-container">
+    <div class="g1 toggle-box">
+      <input type="checkbox" id="good" class="toggle">
+      <label for="good" class="toggle-label">Good</label>
+    </div>
+    <div class="g2 toggle-box">
+      <input type="checkbox" id="cheap" class="toggle">
+      <label for="cheap" class="toggle-label">Cheap</label>
+    </div>
+    <div class="g3 toggle-box">
+      <input type="checkbox" id="fast" class="toggle">
+      <label for="fast" class="toggle-label">Fast</label>
+    </div>
+  </div>
+</div>
+
+<script>
+  const checkboxes = document.querySelectorAll('.toggle');
+  checkboxes.forEach(checkbox => {
+    checkbox.addEventListener('click', () => {
+      let checkedCount = 0;
+      checkboxes.forEach(cb => {
+        if (cb.checked) checkedCount++;
+      });
+      if (checkedCount > 2) {
+        checkbox.checked = false;
+      }
+    });
+  });
 </script>
 
 </body>
-
 </html>
