--- a/main.html
+++ b/main.html
@@ -73,20 +73,22 @@
 <body>
 
 <div class="container">
-  <h2>How do you want your project to be</h2>
+  <h2>How do you want your project to be?</h2>
   <div class="toggle-container">
-    <div class="g1 toggle-box">
+    <label class=" toggle-box" id="g1">
       <input type="checkbox" id="good" class="toggle">
-      <label for="good" class="toggle-label">Good</label>
-    </div>
-    <div class="g2 toggle-box">
-      <input type="checkbox" id="cheap" class="toggle">
-      <label for="cheap" class="toggle-label">Cheap</label>
-    </div>
-    <div class="g3 toggle-box">
+      <span for="good" class="toggle-label">Good</span>
+	</label>
+    
+    <label class=" toggle-box" id="g2">
       <input type="checkbox" id="fast" class="toggle">
-      <label for="fast" class="toggle-label">Fast</label>
-    </div>
+      <span for="fast" class="toggle-label">Fast</span>
+    </label>
+	  
+    <label class=" toggle-box" id="g3">
+      <input type="checkbox" id="cheap" class="toggle">
+      <span for="cheap" class="toggle-label">Cheap</span>
+    </label>
   </div>
 </div>
 
