--- a/main.html
+++ b/main.html
@@ -79,17 +79,17 @@
   <div class="toggle-container">
     <label class=" toggle-box" >
       <input type="checkbox" id="good" class="toggle">
-      <span for="good" id="g1" class="toggle-label">Good</span>
+      <span for="Good" id="g1" class="toggle-label">Good</span>
 	</label>
     
     <label class=" toggle-box" >
       <input type="checkbox" id="fast" class="toggle">
-      <span for="fast" id="g2" class="toggle-label">Fast</span>
+      <span for="Fast" id="g2" class="toggle-label">Fast</span>
     </label>
 	  
     <label class=" toggle-box" >
       <input type="checkbox" id="cheap" class="toggle">
-      <span id="g3" for="cheap" class="toggle-label">Cheap</span>
+      <span id="g3" for="Cheap" class="toggle-label">Cheap</span>
     </label>
   </div>
 </div>
