--- a/main.html
+++ b/main.html
@@ -9,25 +9,25 @@
 </head>
 <body>
 
-<h2>How do you want your project to be</h2>
+<h2>How do you want your project to be?</h2>
 
 <div class="toggle-container">
-	<label class="g1 toggle-div">
+	<label class="toggle-div">
 		<input type="checkbox" class="toggle" id="good" >
 		<span class="toggle-span round"></span>
-		<label class="toggle-text">Good</label>
+		<span class="toggle-text" id="g1">Good</span>
 	</label>
 
-	<label class="g2 toggle-div">
+	<label class="toggle-div">
 		<input type="checkbox" class="toggle" id="cheap" >
 		<span class="toggle-span round"></span>
-		<label class="toggle-text">Cheap</label>
+		<span class="toggle-text" id="g2">Cheap</span>
 	</label>
 
-	<label class="g3 toggle-div">
+	<label class="toggle-div">
 		<input type="checkbox" class="toggle" id="fast" >
 		<span class="toggle-span round"></span>
-		<label class="toggle-text">Fast</label>
+		<span class="toggle-text" id="g3">Fast</span>
 	</label>
 	
 </div>
