--- a/main.html
+++ b/main.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
@@ -13,25 +13,24 @@
 
 <div class="toggle-container">
 	<label class="toggle-div">
-		<input type="checkbox" class="toggle" id="good" >
+		<input type="checkbox" class="toggle" id="good">
 		<span class="toggle-span round"></span>
 		<span class="toggle-text" id="g1">Good</span>
 	</label>
 
 	<label class="toggle-div">
-		<input type="checkbox" class="toggle" id="cheap" >
+		<input type="checkbox" class="toggle" id="cheap">
 		<span class="toggle-span round"></span>
 		<span class="toggle-text" id="g2">Cheap</span>
 	</label>
 
 	<label class="toggle-div">
-		<input type="checkbox" class="toggle" id="fast" >
+		<input type="checkbox" class="toggle" id="fast">
 		<span class="toggle-span round"></span>
 		<span class="toggle-text" id="g3">Fast</span>
 	</label>
-	
 </div>
-  
+
 <script>
   const checkboxes = document.querySelectorAll('.toggle');
   checkboxes.forEach(checkbox => {
@@ -48,5 +47,4 @@
 </script>
 
 </body>
-</html> 
-  
+</html>
